haggle/src/libhaggle/include/libhaggle/attribute.h

/**
   \defgroup Attribute Attribute

   Attributes are name value pairs that define the metadata of data
   objects.

*/

/*@{*/

typedef struct HAGGLE_API attribute {
	list_t l;
	unsigned long weight;
	char *value;
	char *name;
} haggle_attr_t;
/* Attributes */

/**
	Returns the attribute's name.
	
	The returned string is the property of the attribute and may not be 
	released.
	
	@returns A valid pointer to a null-terminated string iff successful, NULL 
	otherwise.
*/
HAGGLE_API const char *haggle_attribute_get_name(const struct attribute *attr);
/**
	Returns the attribute's value.
	
	The returned string is the property of the attribute and may not be 
	released.
	
	@returns A valid pointer to a null-terminated string iff successful, NULL 
	otherwise.
*/
HAGGLE_API const char *haggle_attribute_get_value(const struct attribute *attr);